Adding some more structure to the behavioral design patterns