@@ -1,7 +1,6 @@
 package com.twitter.analyticsengine;
 
 import com.twitter.core.dao.message.TweetDao;
-import com.twitter.core.model.message.Tag;
 import com.twitter.core.model.message.Tweet;
 import com.twitter.core.model.user.Sex;
 import com.twitter.core.model.user.User;
@@ -12,9 +11,9 @@ import org.junit.Test;
 import org.mockito.Mockito;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.EnumMap;
 import java.util.List;
-import java.util.Map;
 
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
@@ -79,17 +78,17 @@ public class TweetAnalyticsTest {
     @Test
     public void getCountsPerStatus_givenEnumsetOfTweetsWStatuses_returnCorrectCountPerStatus(){
         // given
-        List<Tweet> ageRestricted = new ArrayList<>(List.of(
+        List<Tweet> ageRestricted = new ArrayList<Tweet>(Arrays.asList(
                 new Tweet(66, "Text from first tweet - age restricted", null, null, null, null),
                 new Tweet(3, "Text from second tweet - age restricted", null, null, null, null),
                 new Tweet(789, "Text from third tweet - age restricted", null, null, null, null)
         ));
 
-        List<Tweet> approvedByMach = new ArrayList<>(List.of(
+        List<Tweet> approvedByMach = new ArrayList<Tweet>(Arrays.asList(
                 new Tweet(2, "Text from first tweet - approvedByMach", null, null, null, null)
         ));
 
-        EnumMap<Tweet.TweetStatus, List<Tweet>> tweetsWStatuses = new EnumMap<>(Tweet.TweetStatus.class){{
+        EnumMap<Tweet.TweetStatus, List<Tweet>> tweetsWStatuses = new EnumMap<Tweet.TweetStatus, List<Tweet>>(Tweet.TweetStatus.class){{
             put(Tweet.TweetStatus.AGE_RESTRICTED, ageRestricted);
             put(Tweet.TweetStatus.APPROVED_BY_MACHINE_PENDIGN_HUMAN_REVIEW, approvedByMach);
         }};
@@ -106,9 +105,6 @@ public class TweetAnalyticsTest {
         Assert.assertEquals(approvedByMach.size(), (long)countPerStatus.get(Tweet.TweetStatus.APPROVED_BY_MACHINE_PENDIGN_HUMAN_REVIEW));
         Mockito.verify(mockTweetDao, times(1)).getAllTweetsGroupedByStatus();
     }
-
-//    @Test
-//    public void getAvgTweetLength_givenNullList_throwsException(){}
 
 //    @Test
 //    public void getAvgTweetLength_givenNullList_throwsException(){}
